tests/NormalTests/paczka1/fuzzy1/17978568.err
Error in line 4: APUfXo S487 76,2
Error in line 6: yMHlMB A713 92,2
Error in line 13: bAbPUfXo A463 37,4
Error in line 22: SP9XOL S487 773
